[package]
name = "gridwake-replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Replication graph primitives and budgeted priority selection for Gridwake."
keywords.workspace = true
categories.workspace = true

[dependencies]
gridwake-core = { path = "../core" }

[lints]
workspace = true
